Turned character art <div> into <figure> & caption <p> into <figcaption>

--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -70,10 +70,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="艾鬼影">
-                  <p class="caption">鬼影</p>
-                </div>
+                  <figcaption class="caption">鬼影</figcaption>
+                </figure>
                 <p>
                   艾　鬼影（アイ・グイイーン）<br>
                   Ai Guiying
@@ -119,10 +119,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="李藍紀">
-                  <p class="caption">藍紀</p>
-                </div>
+                  <figcaption class="caption">藍紀</figcaption>
+                </figure>
                 <p>
                   李　藍紀（リ・ランジ）<br>
                   Li Lanji
@@ -168,10 +168,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="梁丘城">
-                  <p class="caption">城</p>
-                </div>
+                  <figcaption class="caption">城</figcaption>
+                </figure>
                 <p><ruby>凍結少女將軍<rt>フリーズ・メイデン・ジェネラル</rt></ruby></p>
                 <p>
                   梁丘　城（リヤンチウ・チェン）<br>
@@ -233,10 +233,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="梅樹人">
-                  <p class="caption">樹人</p>
-                </div>
+                  <figcaption class="caption">樹人</figcaption>
+                </figure>
                 <p>
                   梅　樹人（メイ・シュレン）<br>
                   Mei Shuren
@@ -289,10 +289,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="混沌">
-                  <p class="caption">混沌</p>
-                </div>
+                  <figcaption class="caption">混沌</figcaption>
+                </figure>
                 <p>
                   混沌（こんとん）<br>
                   Hundun
@@ -338,10 +338,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="琴朝">
-                  <p class="caption">朝</p>
-                </div>
+                  <figcaption class="caption">朝</figcaption>
+                </figure>
                 <p>
                   琴　朝（チン・チャオ）<br>
                   Qin Chao
@@ -388,10 +388,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="窮奇人殺丸">
-                  <p class="caption">人殺丸</p>
-                </div>
+                  <figcaption class="caption">人殺丸</figcaption>
+                </figure>
                 <p>
                   窮奇　人殺丸（きゅうき・じんさつまる）<br>
                   Qiongqi Jinsatsumaru
@@ -437,10 +437,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="饕餮食雲">
-                  <p class="caption">食雲</p>
-                </div>
+                  <figcaption class="caption">食雲</figcaption>
+                </figure>
                 <p>神を貪り食った子供</p>
                 <p>
                   饕餮　食雲（とうてつ・くくも）<br>
@@ -487,10 +487,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="檮杌馬鹿模">
-                  <p class="caption">馬鹿模</p>
-                </div>
+                  <figcaption class="caption">馬鹿模</figcaption>
+                </figure>
                 <p>
                   檮杌　馬鹿模（とうこつ・ばかも）<br>
                   Taowu Bakamo
@@ -536,10 +536,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="學苗">
-                  <p class="caption">學苗</p>
-                </div>
+                  <figcaption class="caption">學苗</figcaption>
+                </figure>
                 <p>
                   學苗（シュエミヤオ）<br>
                   Xuemiao
@@ -592,10 +592,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="安抗仙">
-                  <p class="caption">抗仙</p>
-                </div>
+                  <figcaption class="caption">抗仙</figcaption>
+                </figure>
                 <p>
                   安　抗仙（アン・カンシエン）<br>
                   An Kangxian
@@ -641,10 +641,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="水慧">
-                  <p class="caption">慧</p>
-                </div>
+                  <figcaption class="caption">慧</figcaption>
+                </figure>
                 <p>
                   水　慧（シュイ・ホゥイ）<br>
                   Shui Hui
@@ -690,10 +690,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="莊芳">
-                  <p class="caption">芳</p>
-                </div>
+                  <figcaption class="caption">芳</figcaption>
+                </figure>
                 <p>
                   莊　芳（ジュワン・ファン）<br>
                   Zhuang Fang
@@ -746,10 +746,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="巴修影">
-                  <p class="caption">修影</p>
-                </div>
+                  <figcaption class="caption">修影</figcaption>
+                </figure>
                 <p>
                   巴　修影（バ・シウイーン）<br>
                   Ba Xiuying
@@ -795,10 +795,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="紅桁">
-                  <p class="caption">桁</p>
-                </div>
+                  <figcaption class="caption">桁</figcaption>
+                </figure>
                 <p>
                   紅　桁（ホン・ヘン）<br>
                   Hong Heng
@@ -844,10 +844,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="令狐柳仙">
-                  <p class="caption">柳仙</p>
-                </div>
+                  <figcaption class="caption">柳仙</figcaption>
+                </figure>
                 <p>
                   令狐　柳仙（リンホゥ・リウシエン）<br>
                   Linghu Liuxian
@@ -893,10 +893,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="齊姜">
-                  <p class="caption">姜</p>
-                </div>
+                  <figcaption class="caption">姜</figcaption>
+                </figure>
                 <p>
                   齊　姜（チ・ジアン）<br>
                   Qi Jiang
@@ -942,10 +942,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="葉福恆">
-                  <p class="caption">福恆</p>
-                </div>
+                  <figcaption class="caption">福恆</figcaption>
+                </figure>
                 <p>
                   葉　福恆（イエ・フヘン）<br>
                   Ye Fuheng
@@ -991,10 +991,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="鄒鳳苗">
-                  <p class="caption">鳳苗</p>
-                </div>
+                  <figcaption class="caption">鳳苗</figcaption>
+                </figure>
                 <p>
                   鄒　鳳苗（ゾウ・フォンミヤオ）<br>
                   Zou Fengmiao
@@ -1047,10 +1047,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="金平春">
-                  <p class="caption">春</p>
-                </div>
+                  <figcaption class="caption">春</figcaption>
+                </figure>
                 <p>
                   金平　春（ジンピン・チュン）<br>
                   Jinping Chun
@@ -1096,10 +1096,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="長孫學風">
-                  <p class="caption">學風</p>
-                </div>
+                  <figcaption class="caption">學風</figcaption>
+                </figure>
                 <p>
                   長孫　學風（ジャンスン・シュエフォン）<br>
                   Zhangsun Xuefeng
@@ -1152,10 +1152,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="林田龍">
-                  <p class="caption">田龍</p>
-                </div>
+                  <figcaption class="caption">田龍</figcaption>
+                </figure>
                 <p>
                   林　田龍（リン・ティエンロン）<br>
                   Lin Tianlong
@@ -1215,10 +1215,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="壤駟虹珠">
-                  <p class="caption">虹珠</p>
-                </div>
+                  <figcaption class="caption">虹珠</figcaption>
+                </figure>
                 <p>
                   壤駟　虹珠（ランシ・ホンジュ）<br>
                   Rangsi Hongzhu
@@ -1276,10 +1276,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="上官羅陽">
-                  <p class="caption">羅陽</p>
-                </div>
+                  <figcaption class="caption">羅陽</figcaption>
+                </figure>
                 <p><ruby>冷凍顧問<rt>フリーズアドバイザー</rt></ruby></p>
                 <p>
                   上官　羅陽（シャングアン・ルオヤン）<br>
@@ -1342,10 +1342,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="孫小伊蘇">
-                  <p class="caption">小伊蘇</p>
-                </div>
+                  <figcaption class="caption">小伊蘇</figcaption>
+                </figure>
                 <p>
                   孫　小伊蘇（スン　こいそ）<br>
                   Sun Koiso
@@ -1393,10 +1393,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="孫呂齊">
-                  <p class="caption">呂齊</p>
-                </div>
+                  <figcaption class="caption">呂齊</figcaption>
+                </figure>
                 <p>
                   孫　呂齊（スン・リュチ）<br>
                   Sun Luqi
@@ -1443,10 +1443,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="孫來蝶">
-                  <p class="caption">來蝶</p>
-                </div>
+                  <figcaption class="caption">來蝶</figcaption>
+                </figure>
                 <p>
                   孫　來蝶（スン　らいちょう）<br>
                   Sun Raicho
@@ -1494,10 +1494,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="孫薛剛">
-                  <p class="caption">薛剛</p>
-                </div>
+                  <figcaption class="caption">薛剛</figcaption>
+                </figure>
                 <p><ruby>冷凍公主<rt>フリーズプリンセス</rt></ruby></p>
                 <p>
                   孫　薛剛（スン・シュエガン）<br>
@@ -1554,10 +1554,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="孫夕紀字乃">
-                  <p class="caption">夕紀字乃</p>
-                </div>
+                  <figcaption class="caption">夕紀字乃</figcaption>
+                </figure>
                 <p>
                   孫　夕紀字乃（スン　ゆうきじの）<br>
                   Sun Yukijino
@@ -1605,10 +1605,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="熊之好">
-                  <p class="caption">之好</p>
-                </div>
+                  <figcaption class="caption">之好</figcaption>
+                </figure>
                 <p>用心棒凍結大臣</p>
                 <p>
                   熊　之好（シオン・ジハオ）<br>
