Added character art for Yaki Kishima

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -1203,7 +1203,7 @@
                 </a>
               </div>
               <figure class="art-chara">
-                <img class="art" src="../img/fill.png" alt="杵島也紀">
+                <img class="art" src="../img/art/杵島也紀.png" alt="杵島也紀">
                 <figcaption class="caption">也紀</figcaption>
               </figure>
               <p>王国の煩わしい不良少女</p>
