Added art piece "Yaki's Part-time Job at the Zoo"

--- a/html/gallery/ushie/Yaki_Kishima.html
+++ b/html/gallery/ushie/Yaki_Kishima.html
@@ -59,9 +59,9 @@
           <p>(T_T)</p>
         </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
-          <figure class="art-gallery" id="">
-            <img class="gallery-art" src="../../../img/gallery/Yaki_Kishima/.png" alt="">
-            <figcaption class="caption"></figcaption>
+          <figure class="art-gallery" id="Yaki's Part-time Job at the Zoo">
+            <img class="gallery-art" src="../../../img/gallery/Yaki_Kishima/動物園にいる也紀のバイト.png" alt="Yaki's Part-time Job at the Zoo">
+            <figcaption class="caption">Yaki's Part-time Job at the Zoo</figcaption>
           </figure>
         </div>
       </section>
