--- a/html/ushie.html
+++ b/html/ushie.html
@@ -1233,6 +1233,7 @@
                 窃盗「侵入と強盗事件」
               </p>
               <p>※代名詞は「ワタシ」である。</p>
+              <a href="./gallery/ushie/Yaki_Kishima.html" target="topframe">美術館へ行きますか？</a>
             </div>
           </section>
           <!-- 杵島裕郎（Yuurou Kishima） -->
