Corrected a typo that should've been corrected a long while ago

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -539,7 +539,7 @@
                   代名詞：奴（they/them）<br>
                   雌雄性：ストレート
                 </p>
-                <p>※キリル文字に「<span lang="mn" class="cyrillic-font" title="Mongolian text (Cyrillic)">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="mongolian-font mongolian-texts" title="Traditional Mongolian text">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
+                <p>※キリル文字に「<span lang="mn" class="cyrillic-font" title="Mongolian text (Cyrillic)">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="mongolian-font mongolian-text" title="Traditional Mongolian text">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
                 <br>
                 <a href="./gallery/nizi/Bolormaa.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
