Updated index.html Changed id's for a couple of `<a></a>` elements

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         But not now.
       </p>
       <nav>
-        <a id="GotoEnUs" href="#">English</a>
+        <a id="GotoEng" href="#">English</a>
         <br>
-        <a id="GotoJaJp" href="#"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
+        <a id="GotoJap" href="#"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
       </nav>
       <p>
         Click below to go back to the top.<br>
