Updated index.html Changed the copryight notice.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
     <footer>
       <p>
-        © 2024 Satoki Nijikawa<br>
+        © 2024 Niji System<br>
         No rights reserved.
       </p>
     </footer>
