Updated index.html Added anchor link element for the art gallery.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <a id="GotoEng" href="#">English</a>
         <br>
         <a id="GotoJap" href="#"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
+        <br>
+        <a id="GotoGallery" href="#">Art Gallery</a>
       </nav>
       <p>
         Click below to go back to the top.<br>
