Updated index.html :3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Niji System">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Page Title -->
+    <!-- Page title -->
     <title>Creation God Record / 造化神録</title>
     <!-- The CSS stylesheet -->
     <link rel="stylesheet" href="./css/index.css">
