Updated index.html Corrected pointer to `HelloWorld' function and gave the button the `Hello' ID.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </h1>
     </header>
     <main>
-      <button type="button" onclick="index_HelloWorld()">Hello world :3</button>
+      <button id="Hello" type="button" onclick="HelloWorld()">Hello world :3</button>
       <p>Hello, and welcome!</p>
       <p>This is the HTML version of the Creation God Record.</p>
       <p>Below you will find the links to the different localisations.</p>
