--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Page title -->
     <title>Creation God Record / 造化神録</title>
     <!-- The CSS stylesheet -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <header>
@@ -49,6 +49,6 @@
       </p>
     </footer>
     <!-- JavaScript -->
-    <script src="./js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
