Updated index.html Properly closed the empty tags.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en-US">
   <head>
     <!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="author" content="Niji System">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="author" content="Niji System" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Page title -->
     <title>Creation God Record / 造化神録</title>
     <!-- The CSS stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <header>
       <h1 id="Head">
-        Ten'en Kansekiri ~ Brilliance of Heaven Pleasure<br>
-        Creation God Record<br>
+        Ten'en Kansekiri ~ Brilliance of Heaven Pleasure<br />
+        Creation God Record<br />
         Welcome
       </h1>
     </header>
@@ -30,13 +30,13 @@
       </p>
       <nav>
         <a id="GotoEng" href="#">English</a>
-        <br>
+        <br />
         <a id="GotoJap" href="#"><span lang="ja-JP" class="japanese">日本語</span> / Japanese</a>
-        <br>
+        <br />
         <a id="GotoGallery" href="#">Art Gallery</a>
       </nav>
       <p>
-        Click below to go back to the top.<br>
+        Click below to go back to the top.<br />
         This will be present at the bottom of every page. 
         This is for your convenience.
       </p>
@@ -44,7 +44,7 @@
     </main>
     <footer>
       <p>
-        © 2024 Niji System<br>
+        © 2024 Niji System<br />
         No rights reserved.
       </p>
     </footer>
