Updated template.html Added reference to CSS class "contents-item".

--- a/eng/template.html
+++ b/eng/template.html
@@ -21,7 +21,7 @@
       <nav id="Contents">
         <details id="ContentsList">
           <summary>Contents</summary>
-          <a id="Jumpto" href="#">Item 1</a>
+          <a id="Jumpto" class="contents-item" href="#">Item 1</a>
           <br />
         </details>
       </nav>
