Updated tmeplate.html Added an id to the image for the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -28,6 +28,14 @@
       </nav>
       <!-- Infobox -->
       <div id="Infobox">
+        <!-- Title of the infobox -->
+        <div id="InfoboxTitle">
+          <p>Example</p>
+        </div>
+        <!-- Picture of the subject (if available) -->
+        <div id="InfoboxImage">
+          <img id="MainImage" />
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
