Updated template.html Added a space for the Japanese name in the info box.

--- a/eng/template.html
+++ b/eng/template.html
@@ -36,6 +36,15 @@
         <div id="InfoboxImage">
           <img id="MainImage" />
         </div>
+        <!-- Name in Japanese -->
+        <div id="JapaneseName">
+          <p id="JapaneseNameTitle">
+            Japanese
+          </p>
+          <p id="Japanese">
+            <span class="japanese" lang="ja-JP">日本語</span> <span class="romaji">Nihongo</span>
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
