Updated art.html Properly closed all empty elements.

--- a/gallery/art.html
+++ b/gallery/art.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
   <head>
     <!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="author" content="Niji System">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="author" content="Niji System" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Page title -->
     <title>Art Gallery / 美術館</title>
     <!-- The CSS stylesheet -->
-    <link rel="stylesheet" href="./art.css">
+    <link rel="stylesheet" href="./art.css" />
   </head>
   <body>
     <header>
