Updated template.html Added an example lead paragraph. This would summarise the page, leaving sections to go into detail.

--- a/eng/template.html
+++ b/eng/template.html
@@ -48,6 +48,12 @@
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
+        <p id="LeadText">
+          The template (<span class="japanese" lang="ja-JP">テンプレート</span> <span class="romaji">tenpurēto</span>) that is being used is quite useful.
+          For example, this lead text / summary is quite good for summarising the page.
+          Of course, the individual section are meant to be where you go into detail.
+          In other words, this opening paragraph is your summary!
+        </p>
       </section>
     </main>
     <!-- This footer should only contain the copyright info -->
