Updated template.html Added id "ContentsDropdown" to the <summary> element for the Contents list. Exapnded the number of example items in the Contents list from 1 to 4.

--- a/eng/template.html
+++ b/eng/template.html
@@ -21,8 +21,14 @@
       <!-- Contents -->
       <nav id="Contents">
         <details id="ContentsList">
-          <summary>Contents</summary>
+          <summary id="ContentsDropdown">Contents</summary>
           <a id="Jumpto" class="contents-item" href="#">Item 1</a>
+          <br />
+          <a id="Jumpto" class="contents-item" href="#">Item 2</a>
+          <br />
+          <a id="Jumpto" class="contents-item" href="#">Item 3</a>
+          <br />
+          <a id="Jumpto" class="contents-item" href="#">Item 4</a>
           <br />
         </details>
       </nav>
