Updated template.html Added `Other names' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -52,6 +52,15 @@
           </p>
         </div>
       </div>
+      <!-- Other names -->
+      <div id="OtherName">
+        <p id="OtherNameTitle">
+          Other names
+        </p>
+        <p id="OtherNames">
+          Lorem ipsum
+        </p>
+      </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
         <p id="LeadText">
