Updated template.html Added placeholder section `Item 1'.

--- a/eng/template.html
+++ b/eng/template.html
@@ -70,6 +70,81 @@
           In other words, this opening paragraph is your summary!
         </p>
       </section>
+      <!-- Section 1 -->
+      <section id="Section1">
+        <!-- Section title -->
+        <h2 id="Section_One" class="section-title">Item 1</h2>
+        <hr />
+        <!-- Section body (Note that `lorem ipsum' is, of course, used here as a placeholder) -->
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Integer scelerisque mauris felis, id fermentum velit vestibulum ut.
+          Phasellus nec felis neque.
+          Aliquam blandit quam scelerisque ligula volutpat porttitor.
+          Aenean efficitur luctus scelerisque.
+          Proin tristique fringilla ligula, sit amet fringilla nunc pretium quis.
+          Vestibulum interdum tempus metus, ornare iaculis lacus sodales ac.
+          Pellentesque odio nulla, mollis a consequat et, sodales in metus.
+          In hac habitasse platea dictumst.
+          Sed scelerisque magna sit amet lobortis malesuada.
+          Phasellus malesuada orci ut ex sodales tempus vel nec augue.
+        </p>
+        <p>
+          Curabitur ut porttitor elit, sed convallis risus.
+          Suspendisse ornare scelerisque purus, a tempor felis blandit eu.
+          Phasellus tempus sapien et molestie placerat.
+          Nam in ante vestibulum, dignissim tortor in, ultrices arcu.
+          Quisque nec lorem id ipsum varius pretium.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Donec in sapien id tellus volutpat porta.
+          Donec ut neque odio.
+          Vestibulum non tristique urna.
+          Donec congue risus velit, sit amet suscipit arcu convallis ac.
+          Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        </p>
+        <p>
+          Ut ullamcorper risus a accumsan rutrum.
+          Mauris vel dolor eleifend, elementum ante sed, condimentum purus.
+          Mauris aliquet mi non augue consequat, eu rhoncus est pellentesque.
+          In est ex, semper sagittis scelerisque ut, tristique quis turpis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Sed dictum felis id mi tempus molestie.
+          Donec ex ex, dignissim eu dolor vel, accumsan ultricies nisl.
+          Integer ut lacus arcu.
+          Duis viverra, ipsum ac fringilla sollicitudin, turpis dolor rhoncus sapien, eget accumsan eros mi sit amet risus.
+        </p>
+        <p>
+          Curabitur sit amet euismod ligula.
+          Sed in metus tellus.
+          Vestibulum convallis arcu at laoreet sollicitudin.
+          Donec sed feugiat sem.
+          Aenean vulputate eget ipsum tristique mollis.
+          Quisque dignissim suscipit rutrum.
+          Aenean volutpat odio eu mauris pellentesque cursus.
+          Etiam at mi eu nunc consequat viverra eu ac nunc.
+          In facilisis sapien ipsum, et tempus arcu vestibulum id.
+          Pellentesque faucibus et tortor sit amet varius.
+          Nulla tincidunt libero vel magna fringilla, ac facilisis libero porta.
+          Duis pretium rhoncus velit in cursus.
+          Morbi varius, nulla sit amet ullamcorper lobortis, urna metus venenatis nulla, finibus lobortis erat lorem ut nibh.
+        </p>
+        <p>
+          Morbi ullamcorper elit vitae ex malesuada, in sagittis quam malesuada.
+          Donec vel aliquet risus.
+          Donec suscipit bibendum sodales.
+          Integer faucibus, dui ut volutpat aliquam, purus arcu tincidunt orci, vitae gravida ante dui non nibh.
+          Maecenas bibendum dui vel eros condimentum ultrices.
+          Donec congue turpis nec ex tincidunt dapibus.
+          Nulla sed aliquam dui.
+          Donec ligula lorem, sagittis eget libero viverra, vulputate interdum velit.
+          Suspendisse sed pharetra dolor.
+          Sed eu mattis orci.
+          Vestibulum sodales metus ac mollis cursus.
+          Sed consectetur vulputate porttitor.
+          Phasellus semper auctor erat sit amet pharetra.
+          Nunc eu egestas leo, ut auctor dui.
+        </p>
+      </section>
     </main>
     <!-- This footer should only contain the copyright info -->
     <footer>
