Updated template.html Contents list now contained inside of the section for the lead paragraph.

--- a/eng/template.html
+++ b/eng/template.html
@@ -18,20 +18,6 @@
     </header>
     <!-- The main meat of the page is, of course, here -->
     <main>
-      <!-- Contents -->
-      <nav id="Contents">
-        <details id="ContentsList">
-          <summary id="ContentsDropdown">Contents</summary>
-          <a id="Jumpto" class="contents-item" href="#">Item 1</a>
-          <br />
-          <a id="Jumpto" class="contents-item" href="#">Item 2</a>
-          <br />
-          <a id="Jumpto" class="contents-item" href="#">Item 3</a>
-          <br />
-          <a id="Jumpto" class="contents-item" href="#">Item 4</a>
-          <br />
-        </details>
-      </nav>
       <!-- Infobox -->
       <div id="Infobox">
         <!-- Title of the infobox -->
@@ -63,6 +49,21 @@
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
+        <!-- Contents -->
+        <nav id="Contents">
+          <details id="ContentsList">
+            <summary id="ContentsDropdown">Contents</summary>
+            <a id="Jumpto" class="contents-item" href="#">Item 1</a>
+            <br />
+            <a id="Jumpto" class="contents-item" href="#">Item 2</a>
+            <br />
+            <a id="Jumpto" class="contents-item" href="#">Item 3</a>
+            <br />
+            <a id="Jumpto" class="contents-item" href="#">Item 4</a>
+            <br />
+          </details>
+        </nav>
+        <!-- Summary -->
         <p id="LeadText">
           The template (<span class="japanese" lang="ja-JP">テンプレート</span> <span class="romaji">tenpurēto</span>) that is being used is quite useful.
           For example, this lead text / summary is quite good for summarising the page.
