Fixed the infobox Redid the way the `Japanese name' and `Other names' sections of the infobox are displayed.

--- a/eng/template.html
+++ b/eng/template.html
@@ -30,19 +30,15 @@
         </div>
         <!-- Name in Japanese -->
         <div id="JapaneseName">
-          <p id="JapaneseNameTitle">
-            Japanese
-          </p>
-          <p id="Japanese">
+          <p>
+            <span id="JapaneseNameTitle">Japanese</span><br />
             <span class="japanese" lang="ja-JP">日本語</span> <span class="romaji">Nihongo</span>
           </p>
         </div>
         <!-- Other names -->
         <div id="OtherName">
-          <p id="OtherNameTitle">
-            Other names
-          </p>
-          <p id="OtherNames">
+          <p>
+            <span id="OtherNameTitle">Other names</span><br />
             Lorem ipsum
           </p>
         </div>
