--- a/eng/template.html
+++ b/eng/template.html
@@ -26,7 +26,7 @@
         </div>
         <!-- Picture of the subject (if available) -->
         <div id="InfoboxImage">
-          <img id="MainImage" />
+          <img id="MainImage" src="./" alt="This would be a placeholder image, but I haven't imported any of the images or art yet... &gt;~&lt;" />
         </div>
         <!-- Name in Japanese -->
         <div id="JapaneseName">
