Added `Return to top' link Added the ever helpful `Return to the top' link, and styled it to keep some consistency with the rest of the page.

--- a/eng/template.html
+++ b/eng/template.html
@@ -368,6 +368,8 @@
         </p>
       </section>
     </main>
+    <!-- Return to top (these pages are intended to be kinda long, so this link is a must for user comfort) -->
+    <a id="ReturnToTop" href="#Head">Return to the top</a>
     <!-- This footer should only contain the copyright info -->
     <footer>
       <p id="CopyrightInfo">
