Updated template.html Properly linked up the contents list items with their respective sections. They now jump to the section in question, instead of just twiddling their thumbs whilst doing nothing.

--- a/eng/template.html
+++ b/eng/template.html
@@ -49,13 +49,13 @@
         <nav id="Contents">
           <details id="ContentsList">
             <summary id="ContentsDropdown">Contents</summary>
-            <a id="Jumpto" class="contents-item" href="#">Item 1</a>
+            <a id="Jumpto" class="contents-item" href="#Section_One">Item 1</a>
             <br />
-            <a id="Jumpto" class="contents-item" href="#">Item 2</a>
+            <a id="Jumpto" class="contents-item" href="#Section_Two">Item 2</a>
             <br />
-            <a id="Jumpto" class="contents-item" href="#">Item 3</a>
+            <a id="Jumpto" class="contents-item" href="#Section_Three">Item 3</a>
             <br />
-            <a id="Jumpto" class="contents-item" href="#">Item 4</a>
+            <a id="Jumpto" class="contents-item" href="#Section_Four">Item 4</a>
             <br />
           </details>
         </nav>
