Updated template.html Added a name pronunciation section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -35,6 +35,13 @@
             <span class="japanese" lang="ja-JP">日本語</span> <span class="romaji">Nihongo</span>
           </p>
         </div>
+        <!-- Name pronunciation -->
+        <div id="NamePronunciation">
+          <p>
+            <span id="NamePronunciationTitle">Pronunciation</span><br />
+            /<span class="internation-phonetic-alphabet">ɲ̟ihõ̞ŋɡo̞</span>/
+          </p>
+        </div>
         <!-- Other names -->
         <div id="OtherName">
           <p>
