Updated template.html Replace the image placeholder with a proper placeholder image.

--- a/eng/template.html
+++ b/eng/template.html
@@ -26,7 +26,7 @@
         </div>
         <!-- Picture of the subject (if available) -->
         <div id="InfoboxImage">
-          <img id="MainImage" src="./" alt="This would be a placeholder image, but I haven't imported any of the images or art yet... &gt;~&lt;" />
+          <img id="MainImage" src="../img/.placehold/Placeholder.png" alt="A placeholder image with the Japanese text ｢ここにある、何もない｣. The English text below reads “There's nothing here......”" />
         </div>
         <!-- Name in Japanese -->
         <div id="JapaneseName">
