Updated template.html Added `Species' section to the infobox.

--- a/eng/template.html
+++ b/eng/template.html
@@ -49,6 +49,13 @@
             Lorem ipsum
           </p>
         </div>
+        <!-- Species -->
+        <div id="Species">
+          <p>
+            <span id="SpeciesTitle">Species</span><br />
+            Indescribable
+          </p>
+        </div>
       </div>
       <!-- The lead; the overall summary of the page -->
       <section id="Lead">
